<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRegistroServicios"
    android:background="@drawable/fondo_aplicacion"
    >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarRegistroCliente"
        android:background="@color/colorverde">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/toolbarRegistrarServicio"
            android:textAlignment="center"
            android:textSize="25dp"

            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:padding="40dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher"
                    android:id="@+id/iv"

                  />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                >


                <EditText
                    android:id="@+id/txtCodigoRegistrarServicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/fondo_texto"
                    android:layout_gravity="center"
                    android:hint="@string/txtCodigoRegistrarServicio"
                    android:textSize="25dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:gravity="center"
                    />

                <EditText
                    android:id="@+id/txtNombreRegistrarServicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/fondo_texto"
                    android:layout_gravity="center"
                    android:textSize="25dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:gravity="center"
                    android:hint="@string/txtNombreRegistrarServicio"
                    />
            </LinearLayout>

        </LinearLayout>



        <EditText
            android:id="@+id/txtDescripcionRegistrarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/fondo_texto"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:inputType="text"
            android:singleLine="true"
            android:gravity="center"
            android:hint="@string/txtDescripcionRegistrarServicio"
            />



        <EditText
            android:id="@+id/txtUbicacionRegistrarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/fondo_texto"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:inputType="text"
            android:singleLine="true"
            android:gravity="center"
            android:hint="@string/txtUbicacionRegistrarServicio"
            />
        <EditText
            android:id="@+id/txtRecursosDisponiblesRegistrarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/fondo_texto"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:inputType="text"
            android:singleLine="true"
            android:gravity="center"
            android:hint="@string/txtRecursosDisponiblesRegistrarServicio"
            />




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/txtFechaInicialRegistrarServicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"


                    android:background="@drawable/fondo_texto"
                    android:layout_gravity="center"
                    android:textSize="25dp"
                    android:inputType="datetime"
                    android:singleLine="true"
                    android:gravity="center"
                    android:hint="@string/txtFechaInicialRegistrarServicio"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></LinearLayout>
                <EditText
                    android:id="@+id/txtFechaFinalRegistrarServicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/fondo_texto"
                    android:layout_gravity="center"
                    android:textSize="25dp"
                    android:inputType="datetime"
                    android:singleLine="true"
                    android:gravity="center"
                    android:hint="@string/txtFechaFinalRegistrarServicio"
                    />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnGuardarRegistrarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/btnGuardarRegistrarServicio"
            android:background="@drawable/fondo_boton"
            android:elevation="40dp"/>


    </LinearLayout>




</FrameLayout>