<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRegistrarEncargado"
    android:background="@drawable/fondo_aplicacion"
    >


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarRecuperarContrasena"
        android:background="@color/colorverde">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/toolbarRecuperarContrasena"
            android:textAlignment="center"
            android:textSize="25dp"

            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="gravity"
            android:textSize="18dp"
            android:text="Ingresa la última contraseña que recuerdes haber usado en esta aplicación." />

        <EditText
            android:id="@+id/txtRecuperarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/fondo_texto"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:inputType="text"
            android:singleLine="true"
            android:gravity="center"
            android:hint="@string/txtRecuperarContrasena"
            />



        <Button
            android:id="@+id/btnRecuperarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/btnRecuperarContrasena"
            android:background="@drawable/fondo_boton"
            android:elevation="40dp"/>


    </LinearLayout>


</FrameLayout>