<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_aplicacion"
    tools:context=".Principal">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <!--
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_principal" />
<!--
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />
-->

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/menu_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:fab_labelStyle="@style/Etiquetas"
        app:fab_addButtonColorNormal="@color/colorverde"
        app:fab_addButtonSize="normal"
        app:fab_labelsPosition="left"
        >

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_crear_encargado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFFFF"
            app:fab_icon="@drawable/ic_crear_encargado"
            app:fab_size="normal"
            app:fab_title="@string/lblCrearEncargado"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_crear_servicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFFFF"
            app:fab_icon="@drawable/ic_add_item"
            app:fab_size="normal"
            app:fab_title="@string/lblCrearServicio" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_crear_tipo_servicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFFFF"
            app:fab_icon="@drawable/ic_imagen_tipo_servicio"
            app:fab_size="normal"
            app:fab_title="@string/lblCrearTipoServicio"
           />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</android.support.design.widget.CoordinatorLayout>